[package]
name = "quinn-min-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0" 
tokio = { version = "^1.19", features = ["full"] }
quinn = "^0.8"
rustls = "^0.20"
rustls-pemfile = "^1.0"
futures-util = "^0.3"